seaqt/QtWidgets/gen_qtreeview.nim

proc fcQTreeView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_dragLeaveEvent".}
proc fQTreeView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_dropEvent".}
proc fcQTreeView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_dropEvent".}
proc fQTreeView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_focusInEvent".}
proc fcQTreeView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_focusInEvent".}
proc fQTreeView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_focusOutEvent".}
proc fcQTreeView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_focusOutEvent".}
proc fQTreeView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_resizeEvent".}
proc fcQTreeView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_resizeEvent".}
proc fQTreeView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_inputMethodEvent".}
proc fcQTreeView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_inputMethodEvent".}
proc fQTreeView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QTreeView_virtualbase_eventFilter".}
proc fcQTreeView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_eventFilter".}
proc fQTreeView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_minimumSizeHint".}
proc fcQTreeView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_minimumSizeHint".}
proc fQTreeView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_sizeHint".}
proc fcQTreeView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_sizeHint".}
proc fQTreeView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QTreeView_virtualbase_setupViewport".}
proc fcQTreeView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setupViewport".}
proc fQTreeView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QTreeView_virtualbase_wheelEvent".}
proc fcQTreeView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_wheelEvent".}
proc fQTreeView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QTreeView_virtualbase_contextMenuEvent".}
proc fcQTreeView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_contextMenuEvent".}
proc fQTreeView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTreeView_virtualbase_changeEvent".}
proc fcQTreeView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_changeEvent".}
proc fQTreeView_virtualbase_devType(self: pointer, ): cint{.importc: "QTreeView_virtualbase_devType".}
proc fcQTreeView_override_virtual_devType(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_devType".}
proc fQTreeView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTreeView_virtualbase_setVisible".}
proc fcQTreeView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setVisible".}
proc fQTreeView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTreeView_virtualbase_heightForWidth".}
proc fcQTreeView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_heightForWidth".}
proc fQTreeView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTreeView_virtualbase_hasHeightForWidth".}
proc fcQTreeView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_hasHeightForWidth".}
proc fQTreeView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_paintEngine".}
proc fcQTreeView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_paintEngine".}
proc fQTreeView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_keyReleaseEvent".}
proc fcQTreeView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_keyReleaseEvent".}
proc fQTreeView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_enterEvent".}
proc fcQTreeView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_enterEvent".}
proc fQTreeView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_leaveEvent".}
proc fcQTreeView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_leaveEvent".}
proc fQTreeView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_moveEvent".}
proc fcQTreeView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_moveEvent".}
proc fQTreeView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_closeEvent".}
proc fcQTreeView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_closeEvent".}
proc fQTreeView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_tabletEvent".}
proc fcQTreeView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_tabletEvent".}
proc fQTreeView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_actionEvent".}
proc fcQTreeView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_actionEvent".}
proc fQTreeView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_showEvent".}
proc fcQTreeView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_showEvent".}
proc fQTreeView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_hideEvent".}
proc fcQTreeView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_hideEvent".}
proc fQTreeView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QTreeView_virtualbase_nativeEvent".}
proc fcQTreeView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_nativeEvent".}
proc fQTreeView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTreeView_virtualbase_metric".}
proc fcQTreeView_override_virtual_metric(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_metric".}
proc fQTreeView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTreeView_virtualbase_initPainter".}
proc fcQTreeView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_initPainter".}
proc fQTreeView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTreeView_virtualbase_redirected".}
proc fcQTreeView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_redirected".}
proc fQTreeView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_sharedPainter".}
proc fcQTreeView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_sharedPainter".}
proc fQTreeView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_childEvent".}
proc fcQTreeView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_childEvent".}
proc fQTreeView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_customEvent".}
proc fcQTreeView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_customEvent".}
proc fQTreeView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTreeView_virtualbase_connectNotify".}
proc fcQTreeView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_connectNotify".}
proc fQTreeView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTreeView_virtualbase_disconnectNotify".}
proc fcQTreeView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_disconnectNotify".}
proc fcQTreeView_staticMetaObject(): pointer {.importc: "QTreeView_staticMetaObject".}
proc fcQTreeView_delete(self: pointer) {.importc: "QTreeView_delete".}


func init*(T: type gen_qtreeview_types.QTreeView, h: ptr cQTreeView): gen_qtreeview_types.QTreeView =
  T(h: h)
proc create*(T: type gen_qtreeview_types.QTreeView, parent: gen_qwidget_types.QWidget): gen_qtreeview_types.QTreeView =
  gen_qtreeview_types.QTreeView.init(fcQTreeView_new(parent.h))

proc create*(T: type gen_qtreeview_types.QTreeView, ): gen_qtreeview_types.QTreeView =
  gen_qtreeview_types.QTreeView.init(fcQTreeView_new2())

proc metaObject*(self: gen_qtreeview_types.QTreeView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQTreeView_metaObject(self.h))

proc metacast*(self: gen_qtreeview_types.QTreeView, param1: cstring): pointer =
  fcQTreeView_metacast(self.h, param1)

proc metacall*(self: gen_qtreeview_types.QTreeView, param1: cint, param2: cint, param3: pointer): cint =
  fcQTreeView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qtreeview_types.QTreeView, s: cstring): string =
  let v_ms = fcQTreeView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtreeview_types.QTreeView, s: cstring): string =
  let v_ms = fcQTreeView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: gen_qtreeview_types.QTreeView, model: gen_qabstractitemmodel_types.QAbstractItemModel): void =
  fcQTreeView_setModel(self.h, model.h)

proc setRootIndex*(self: gen_qtreeview_types.QTreeView, index: gen_qabstractitemmodel_types.QModelIndex): void =
  fcQTreeView_setRootIndex(self.h, index.h)

proc setSelectionModel*(self: gen_qtreeview_types.QTreeView, selectionModel: gen_qitemselectionmodel_types.QItemSelectionModel): void =
  fcQTreeView_setSelectionModel(self.h, selectionModel.h)

proc header*(self: gen_qtreeview_types.QTreeView, ): gen_qheaderview_types.QHeaderView =
  gen_qheaderview_types.QHeaderView(h: fcQTreeView_header(self.h))

proc setHeader*(self: gen_qtreeview_types.QTreeView, header: gen_qheaderview_types.QHeaderView): void =
  fcQTreeView_setHeader(self.h, header.h)

proc autoExpandDelay*(self: gen_qtreeview_types.QTreeView, ): cint =
  fcQTreeView_autoExpandDelay(self.h)

proc setAutoExpandDelay*(self: gen_qtreeview_types.QTreeView, delay: cint): void =
  fcQTreeView_setAutoExpandDelay(self.h, delay)

proc indentation*(self: gen_qtreeview_types.QTreeView, ): cint =
  fcQTreeView_indentation(self.h)

proc setIndentation*(self: gen_qtreeview_types.QTreeView, i: cint): void =
  fcQTreeView_setIndentation(self.h, i)

proc resetIndentation*(self: gen_qtreeview_types.QTreeView, ): void =
  fcQTreeView_resetIndentation(self.h)

proc rootIsDecorated*(self: gen_qtreeview_types.QTreeView, ): bool =
  fcQTreeView_rootIsDecorated(self.h)
